# Multi-AI-Agent-Trading-System

./: .env.example  .gitignore  README.md  pyproject.toml
src/multi_ai_trading/: __init__.py  cli.py  config.py  domain.py  execution.py  optimizer.py  orchestrator.py  risk.py  strategy.py
src/multi_ai_trading/agents/: __init__.py  base.py  behavior.py  operations.py  sentiment.py  trend.py
src/multi_ai_trading/api/: __init__.py  server.py
src/multi_ai_trading/data/: __init__.py  providers.py  storage.py
tests/: test_optimizer.py  test_orchestrator.py  test_risk.py
