[project]
name = "multi-ai-trading-system"
version = "0.1.0"
description = "Multi-agent AI trading system scaffold for crypto, forex, and gold."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
crypto = ["ccxt>=4.3.0"]
mt5 = ["MetaTrader5>=5.0.0"]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

